--- a/sources/requirements/requirements_class.adoc
+++ b/sources/requirements/requirements_class.adoc
@@ -5,7 +5,7 @@
 ====
 [%metadata]
 identifier:: http://www.opengis.net/spec/ABCD/m.n/req/req-class-a
-subject:: Web API
+target-type:: Web API
 requirement:: /req/req-class-a/req-name-1
 requirement:: /req/req-class-a/req-name-2
 ====
