--- a/sources/mod-spec-user-guide/sections/02-intro.adoc
+++ b/sources/mod-spec-user-guide/sections/02-intro.adoc
@@ -298,4 +298,28 @@ test-method::
 --
 ====
 
+== Requirements class
 
+Requirements should be organized into `requirements classes`. A requirements class is an aggregate of requirements with a 
+single standardization target type that must all be satisfied to pass a <conformance test class. A requirements class is therefore comprised 
+of one or more requirements with the same target type/subtype. Typically in an OGC Standard, all discussion of a given requirements
+class are associated requirements are in the same clause/subclause(s) in the standards document. This provides a logical modular 
+structure to the standards document.
+
+Further, all elements of a requirements class are documented in a table. The structure and layout of this table is dictated by the OGC template.
+
+Below is an AsciiDoc example of an OGC requirements class table formatted for Metanorma publication.
+
+```
+[[req_class_a]]
+
+[requirements_class]
+.Requirements Class 'A'
+====
+[%metadata]
+identifier:: http://www.opengis.net/spec/ABCD/m.n/req/req-class-a
+target-type:: Web API
+requirement:: /req/req-class-a/req-name-1
+requirement:: /req/req-class-a/req-name-2
+====
+```
