Update and rename 01-scope.adoc to 01-scope.adoc

--- a/sources/24-066-part3-xml/01-scope.adoc
+++ b/sources/24-066-part3-xml/01-scope.adoc
@@ -3,7 +3,8 @@
 The OGC ModSpec Standard defines characteristics and structure for the specification of Standards 
 that will encourage implementation by minimizing difficulty determining
 requirements, mimicking implementation structure and maximizing usability and
-interoperability. Part 2 of the ModSpec defines the requirements for using XML. The XML related requirements classes cover any standard which has as one of its purposes
+interoperability. Part 3 of the ModSpec defines the requirements for using XML. 
+The XML related requirements classes cover any standard which has as one of its purposes
 the introduction of a new XML schema. Such a standard would normally define the
 schema, all of its components, and its intended uses.
 
@@ -14,7 +15,7 @@ schema, all of its components, and its intended uses.
 
 The ModSpec Core Standard defines requirements for conformance to the ModSpec, but
 testing for that conformance may depend on how the various forms and parts of a
-conformant standard are viewed. The ModSpec Part 2 Standard specifies how those views
+conformant standard are viewed. The ModSpec Part 3 Standard specifies how those views
 are to be defined as XML. 
 
 As suggested in Clause Requirement 8 of the ModSpec Core, the structure of the normative clauses in a
@@ -27,6 +28,6 @@ parallel.
 
 Version 1.1 of the ModSpec is split into a Core standard and multiple Parts. These are:
 
-- Core: contains all the core requirements and informational text that define the model and internal structure of a standard.
-- Part 1: UML Model requirements 
-- Part 2: XML Model and Schematron requirements 
+- Part 1: Core - contains all the core requirements and informational text that define the model and internal structure of a standard.
+- Part 2 - UML Model requirements 
+- Part 3 - XML Model and Schematron requirements 
