--- a/sources/24-066-part3-xml/02-conformance.adoc
+++ b/sources/24-066-part3-xml/02-conformance.adoc
@@ -1,6 +1,6 @@
 == Conformance
 
-Conformance to the ModSpec Part 2: XML by technical implementation standards 
+Conformance to the ModSpec Part 3: XML by technical implementation standards 
 can be tested by inspection. The test suite is in <<annex-A>>.
 
 There are two conformance classes in this document for:
@@ -12,8 +12,8 @@ This document contains normative language and thus places requirements on
 conformance, or mechanism for adoption, of candidate standards to which the ModSpec
 applies. In particular:
 
-* The OGC ModSpec: Core specifies the core requirements which shall be met by all conformant
+* The OGC ModSpec: Core specifies the core requirements which _SHALL_ be met by all conformant
 standards.
 * The various subclauses of <<cls-6>> list requirements partially derived from the
-core, but more specific to the conditions where the data model is expressed in UML. This requirements class is an
-extension of the Core presented in the ModSpec Core Standard.
+core, but more specific to the conditions where the data model is expressed in XML. The XML requirements class is an
+extension of the Core Requirements Class presented in the ModSpec Core Standard.
