--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,9 @@
 
 image:https://github.com/opengeospatial/ogc-modspec/workflows/generate/badge.svg["Build Status", link="https://github.com/opengeospatial/ogc-modspec/actions/workflows/generate.yml"]
 
-*  https://opengeospatial.github.io/ogc-modspec/documents/document.html[OGC ModSpec (HTML)]
+*  https://opengeospatial.github.io/ogc-modspec/documents/document.html[OGC ModSpec Part 1: Core (HTML)]
+* https://docs.ogc.org/DRAFTS/24-065.html[OGC ModSpec Part2: UML (HTML)]
+* https://docs.ogc.org/DRAFTS/24-066.html[OGC ModSpec Part3: XML (HTML)]
 
 == General
 
