--- a/sources/mod-spec-user-guide/sections/02-informative.adoc
+++ b/sources/mod-spec-user-guide/sections/02-informative.adoc
@@ -349,8 +349,14 @@ The above example is rendered using "traditional" OGC AsciiDoc encoding.
 A `conformance class` a set of conformance tests that must be passed to receive a single certificate of conformance. The OGC ModSpec states
 that for each requirements class there is a corresponding conformance class. This one to one relationship is shown in Figure 1. This means 
 that for each requirement in a requirements class there is a corresponding (one to one) conformance test in the conformance class. Finally, all
-conformance tests in a conformance class have the same standardization target. If the requirements class has one or more dependencies on another 
-requirements class then . . 
+conformance tests in a conformance class have the same standardization target. 
+
+This implies that each requirement is directly in exactly one requirements class and
+all references to that requirement from another requirements class must include its
+complete "home" requirements class. This means that requirements for dependencies will often result in 
+conformance test cases which require the execution of the dependency conformance class. For example,
+using the ModSpec as an example: An implementation passing the UML conformance test class _SHALL_ first 
+pass the ModSpec core conformance test class.
 
 == Dependencies
 
